--- a/GuessIO.Application/GuessIO.Application.csproj
+++ b/GuessIO.Application/GuessIO.Application.csproj
@@ -5,7 +5,7 @@
         <TargetFramework>net7.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
-        <ApplicationIcon>Resources\russkyc_multi.ico</ApplicationIcon>
+        <ApplicationIcon>Resources\guess_io_multi.ico</ApplicationIcon>
         <LangVersion>default</LangVersion>
         <AssemblyName>GuessIO</AssemblyName>
         <RootNamespace>org.russkyc.guessio</RootNamespace>
@@ -14,7 +14,7 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
         <PackageReference Include="Russkyc.AttachedUtilities.FilestreamExtensions" Version="1.1.1" />
-        <PackageReference Include="Russkyc.ModernControls.WPF" Version="1.5.1-dev" />
+        <PackageReference Include="Russkyc.ModernControls.WPF" Version="1.5.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -27,6 +27,11 @@
       <Reference Include="Russkyc.ModernControls.WPF">
         <HintPath>..\..\..\.nuget\packages\russkyc.moderncontrols.wpf\1.5.0\lib\net6.0-windows7.0\Russkyc.ModernControls.WPF.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Resources\guess_io_multi.ico" />
+      <Resource Include="Resources\guess_io_multi.ico" />
     </ItemGroup>
 
 </Project>
